# montage

./: .gitignore  README.md
.codewhale/: instructions.md
backend/: .env.example  Dockerfile  auth.py  config.py  db.py  main.py  models.py  requirements.txt
backend/middleware/: tier_limit.py
backend/migrations/: 001_initial.sql
backend/pipeline/: engine.py  images.py  narrative_templates.py  render.py  research.py  script.py  tts.py  upload.py
backend/routes/: auth.py  auth_me.py  checkout.py  health.py  jobs.py  videos.py
docker/: compose.yaml  init.sql
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: ConfirmDialog.tsx  CreateForm.tsx  IconComponents.tsx  JobProgress.tsx  LogoutButton.tsx  ProgressOverlay.tsx  TierBadge.tsx  VideoCard.tsx
frontend/src/lib/: api-client.ts  api.ts  auth-client.ts  auth-context.tsx  tauri.ts
frontend/src/lib/supabase/: client.ts  middleware.ts
prompts/: backend.md  frontend-auth-migration.md  frontend.md  remotion.md
remotion/: package-lock.json  package.json  tsconfig.json
remotion/src/: AnimatedExplainer.tsx  NerdologiaExplainer.tsx  Root.tsx  SocialClip.tsx
(+2 files in other folders)
