[package]
name = "montage"
version = "0.1.0"
description = "Montage — AI Video Production Desktop App"
authors = ["Penhall"]
license = "AGPL-3.0"
repository = "https://github.com/Penhall/montage"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# Local database
rusqlite = { version = "0.31", features = ["bundled"] }

# Password hashing
bcrypt = "0.16"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }
